--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="container mt-5">
-        <h1 class="mb-4">Générateur de Tickets de Caisse - FGB</h1>
+        <h1 class="mb-4">Générateur de Tickets de Caisse - TKAT</h1>
         
         <form action="/generer_ticket" method="POST" id="ticketForm" onsubmit="handleSubmit(event)">
             <div class="card mb-4">
@@ -49,7 +49,7 @@
                             </div>
                         </div>
                         <!-- Champ comptoir caché -->
-                        <input type="hidden" id="comptoir" name="comptoir" value="FGB">
+                        <input type="hidden" id="comptoir" name="comptoir" value="TKAT">
                     </div>
                 </div>
             </div>
